--- a/myapp/views/user.jade
+++ b/myapp/views/user.jade
@@ -1,9 +1,19 @@
 extends layout
-
+block title
+    title Article Title
 block content
-    h1.
-        User List
-    ul
-        each user, i in userlist
-            li
-                a(href="mailto:#{user.email}")= user.username
+    a(class='button', href='newuser') add new user
+    form#formDelUser(name="deluser",method="post",action="/deluser")
+    table(border='1')
+        thead
+            tr
+                th mail
+                th name
+                th action
+        tbody
+            each user, index in userlist
+                tr
+                    input#inputUserName(type="hidden", value="#{user._id}", name="ident")
+                    td email:#{user.email}
+                    td username:#{user.username}
+                    td: a(class='button', href='newuser') delete
