--- a/myapp/views/newuser.jade
+++ b/myapp/views/newuser.jade
@@ -5,4 +5,5 @@ block content
     form#formAddUser(name="adduser",method="post",action="/adduser")
         input#inputUserName(type="text", placeholder="username", name="username")
         input#inputUserEmail(type="text", placeholder="useremail", name="useremail")
+        input#inputBrot(type="text", placeholder="brot", name="userbrot")
         button#btnSubmit(type="submit") submit
